#459 - Fix modal primary button stretching.

--- a/src/Money.Blazor.Host/wwwroot/css/site.scss
+++ b/src/Money.Blazor.Host/wwwroot/css/site.scss
@@ -455,8 +455,7 @@ h4 {
 
 @media (max-width: 767px) {
     .modal .btn-primary {
-        width: 100%;
-        display: block;
+        flex: 1 1 auto !important; // flex-fill
     }
 }
 
